# prog2

./: .gitignore  .travis.yml  CMakeBuildConfig.cmake  CMakeCMakeConfig.cmake  CMakeCPP.cmake  CMakeCPPConfig.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeLocal.cmake  CMakeLocalConfig.cmake  INSTALL.txt  Makefile  README.md
doc/doxygen/: CMakeLists.txt  Doxyfile.cmake.in  mainpage.doxy.in  namespaces.doxy.in
doc/doxygen/additional_input/: mainpage.doxy
doc/reports/: CMakeLists.txt
main/cpp/: CMakeLists.txt  README.txt
main/cpp/abstract-factory/: CMakeLists.txt  constant-factory.h  employee.h  factory.h  main.cpp  ptree-employee-factory.cpp  ptree-employee-factory.h  stdin-employee-factory.cpp  stdin-employee-factory.h
main/cpp/container/: CMakeLists.txt  CircularIterator.h  CircularIteratorImpl.h  ConstCircularIterator.h  SVIterator.h  SegmentedVector.h  circular_iterator.h
main/cpp/demo-const/: CMakeLists.txt  constcast.cpp  constness.cpp  exampleConst.cpp
main/cpp/demo-copy_move/: CMakeLists.txt  slide-07.cpp  slide-08.cpp  slide-09.cpp  slide-13.cpp  slide-14.cpp
main/cpp/demo-functor/: CMakeLists.txt  lambda-by-value.cpp  lambda-functor.cpp
main/cpp/demo-operator_overloading/: CMakeLists.txt  conversion-operator.cpp  explicit.cpp  friend-input-operator.cpp  functor-state.cpp  lambda-by-reference.cpp  lambda-by-value.cpp  lambda-modules.cpp  lambda-set.cpp  overloading-member-vs-non-member.cpp  overloading.cpp
main/cpp/linking/: example.c  incompatible-template.cpp  inline-functions.cpp  muladd-main.c  overloading.cpp  template-main.cpp  template.cpp
main/cpp/meta/: CMakeLists.txt  power.cpp  select.h  small1.cpp  small2.cpp  smaller.h
main/cpp/objtracer/: Bicycle.cpp  Bicycle.h  Body.cpp  Body.h  CMakeLists.txt  Engine.cpp  Engine.h  Exception.cpp  Exception.h  FreightRoadVehicle.cpp  FreightRoadVehicle.h  LandVehicle.cpp  LandVehicle.h  Motorcycle.cpp  Motorcycle.h  PassengerRoadVehicle.cpp  PassengerRoadVehicle.h  Person.cpp  Person.h  RoadVehicle.cpp  RoadVehicle.h  SailBoat.cpp  SailBoat.h  Unicycle.cpp  Unicycle.h  Vehicle.cpp  Vehicle.h  WaterVehicle.cpp  WaterVehicle.h  Wheel.cpp  Wheel.h  app_copy.cpp  app_essentialops.cpp  app_exception.cpp  app_exec.cpp  app_fcalls.cpp  app_hierarchies.cpp  app_poly1.cpp  app_poly2.cpp  demobj.h  (+8 more)
main/cpp/observer/: CMakeLists.txt  main.cpp  observer.h
main/cpp/pimpl/: CMakeLists.txt  MemoryPool.h  array-impl.cpp  main.cpp  malloc-impl.cpp  memory-pool.h
main/cpp/quad/: AGL_Quadrature.h  AQ_Util.h  AdaptiveQuadrature.h  CMakeLists.txt  CellCountViolation.h  Convergence.h  GaussLegendreRules.h  Integral.h  OscillatoryFunctor.h  PowerFunctor.h  SimpleRules.h  abs_diff.cpp  aquad_demo.cpp  integral_demo.cpp  quad.h
main/cpp/raii/: CMakeLists.txt
main/cpp/stldemo/: CMakeLists.txt  RandInt.h  Range.h  adder.cpp  algo.cpp  bisect.cpp  fill.cpp  freq.cpp  sum1.cpp  sum2.cpp  trans.cpp  tuple_printer.cpp
main/cpp/stldemo_1/: CMakeLists.txt  RandInt.h  Range.h  algo.cpp  bisect.cpp  fill.cpp  fill1.cpp  fill2.cpp  find.cpp  freq.cpp  sum1.cpp  sum2.cpp  trans.cpp
main/cpp/stldemo_2/: CMakeLists.txt  adder.cpp  tuple_printer.cpp
main/cpp/template_basics/: CMakeLists.txt  Readme.txt  max.hpp  max1.cpp  max1.hpp  max2.cpp  max2.hpp  max3-bis.cpp  max3.cpp  max3.hpp  stack1.cpp  stack1.hpp  stack2.hpp  stack2test.cpp  stack3.cpp  stack3.hpp  stack4.hpp  stack5.cpp  stack5.hpp  stack5assign.hpp  stack5decl.hpp  stack6.hpp  stack6decl.hpp  stack7.hpp  stack7test.cpp
main/cpp/template_demo/: CMakeLists.txt  RandInt.h  Range.h  adder.cpp  algo.cpp  bisect.cpp  fill.cpp  find.cpp  freq.cpp  sum2.cpp  trans.cpp
main/cpp/template_meta/: power.cpp  select.h  small1.cpp  small2.cpp
main/cpp/template_quad/: AGL_Quadrature.h  AQ_Util.h  AdaptiveQuadrature.h  CMakeLists.txt  CellCountViolation.h  Convergence.h  GaussLegendreRules.h  Integral.h  OscillatoryFunctor.h  PowerFunctor.h  SimpleRules.h  abs_diff.cpp  abs_diff.h  aquad_demo.cpp  integral_demo.cpp  quad.h
main/cpp/template_traits/: CMakeLists.txt  Readme.txt  accum1.cpp  accum1.hpp  accum10.cpp  accum10.hpp  accum2.cpp  accum2.hpp  accum3.cpp  accum3.hpp  accum4.cpp  accum4.hpp  accum5.cpp  accum5.hpp  accum6.hpp  accum8.cpp  accum8.hpp  accum9.cpp  accum9.hpp  accumtraits2.hpp  accumtraits3.hpp  accumtraits4.hpp  sumpolicy1.hpp  sumpolicy2.hpp  sumpolicy3.hpp
main/cpp/template_vdv_basics/: VDV_LICENSE.txt  addval.hpp  max1.cpp  max3-bis.cpp  max3.cpp  printcoll.hpp  printcollmain.cpp  refnonref.cpp  stack3.hpp  stack6.hpp  stack6assign.hpp  stack7.hpp  stack7decl.hpp
main/cpp/template_vdv_traits/: CMakeLists.txt  Readme.txt  accum3.hpp  accum4.hpp  accum6.hpp  accum9.hpp  accumtraits3.hpp  sizeof.cpp  sumpolicy1.hpp  sumpolicy2.hpp  sumpolicy3.hpp
main/cpp/timekeeper/: ClockCLib.h  ClockTraits.h  CumulativeRecords.h  Records.h  Stopwatch.h  TimeStamp.h  Timeable.h  Utils.h  timekeeper.h
main/cpp/tracer/: BlockTracer.cpp  BlockTracer.h  CMakeLists.txt  FunctionTracer.cpp  FunctionTracer.h  MemberTracer.cpp  MemberTracer.h  TracerOutput.cpp  TracerOutput.h  logdemo.cpp  tracer.h
main/cpp/util/: Exception.h  FunctionMap.h  GNUC_VERSION.h  StringUtils.h  conststr.h  printArgv.h
main/cpp/vdv_basics/: CMakeLists.txt  LICENSE_VDV.txt  Readme.txt  addval.hpp  addvaltest.cpp  max.hpp  max0.cpp  max1-partial.cpp  max1.cpp  max2.cpp  max3-bis.cpp  max3.cpp  max4.cpp  myfirst.cpp  myfirst.hpp  myfirst1main.cpp  myfirst2.hpp  myfirst2main.cpp  myfirst4.hpp  myfirst4main.cpp  printcoll.hpp  printcollmain.cpp  refnonref.cpp  stack1.hpp  stack1test.cpp  stack2.hpp  stack2test.cpp  stack3.hpp  stack3test.cpp  stack4.hpp  stack4test.cpp  stack5.hpp  stack5assign.hpp  stack5decl.hpp  stack5test.cpp  stack6.hpp  stack6assign.hpp  stack6decl.hpp  stack6test.cpp  stack7.hpp  (+5 more)
main/cpp/vdv_traits/: CMakeLists.txt  accum1.cpp  accum1.hpp  accum10.cpp  accum10.hpp  accum2.cpp  accum2.hpp  accum3.cpp  accum3.hpp  accum4.cpp  accum4.hpp  accum5.cpp  (+25 more)
main/resources/: CMakeLists.txt
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt
test/resources/: CMakeLists.txt
(+2255 files in other folders)
