#############################################################################
# Author Jan Broeckhove, CoMP/UA, 2011
#############################################################################

#============================================================================
# Go to subdirs
#============================================================================
add_subdirectory( data )
add_subdirectory( lib )
#############################################################################