#############################################################################
# Author Jan Broeckhove, CoMP/UA, 2011
#############################################################################

#============================================================================
# Install plain text files.
#============================================================================
install( FILES          image.jpg snow_cpp.gif		
		 DESTINATION    ${CMAKE_INSTALL_PREFIX}/data
	)	

#############################################################################